# ribble-whisper

./: .gitignore  .gitmodules  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md
benches/: realtime_transcriber_benchmark.rs  vad_benchmark.rs
examples/: realtime_stream.rs
src/: lib.rs
src/audio/: audio_ring_buffer.rs  loading.rs  recorder.rs  resampler.rs
src/downloader/: downloaders.rs  mod.rs
src/transcriber/: mod.rs  offline_transcriber.rs  realtime_transcriber.rs  vad.rs
src/utils/: errors.rs
src/whisper/: configs.rs  model.rs
tests/: downloader_tests.rs  integrity_tests.rs  model_tests.rs  resampler_tests.rs  ringbuffer_tests.rs  transcriber_tests.rs  vad_tests.rs
tests/common/: mod.rs
