[package]
name = "ribble_whisper"
# TODO: if there are genuinely breaking changes, bump this to 0.2?
# Since this really isn't "done" yet as a library, it probably doesn't matter too much.
version = "0.2.0"
edition = "2024"
description = "High-level wrapper around whisper-rs features with support for realtime transcription; designed for use in GUI and TUI applications."
readme = "README.md"
license = "MIT"
repository = "https://github.com/jordan-clayton/whisper-realtime"
keywords = ["whisper", "realtime", "speech-to-text", "transcription", "audio"]
categories = ["accessibility", "multimedia::audio"]

[lib]
doctest = false

[package.metadata]
license-notes = "Includes third-party code under MPL-2.0 and BSD-3-Clause. See LICENSE-MPL-2.0 and LICENSE-BSD-3."

[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.142", optional = true }
rubato = { version = "0.16.2", optional = true }
whisper-rs = { version = "0.15.0", features = ["log_backend", "tracing_backend"] }
whisper-rs-sys = "0.14.0"
sdl2 = { version = "0.38.0", optional = true }
reqwest = { version = "0.12.23", features = ["blocking", "stream"], optional = true }
futures = { version = "0.3.31", optional = true }
futures-util = { version = "0.3.31", optional = true }
futures-core = { version = "0.3.31", optional = true }
bytes = { version = "1.10.1", optional = true }
tokio = { version = "1.47.1", features = ["rt-multi-thread"], optional = true }
crossbeam = { version = "0.8.4", optional = true }
strum = { version = "0.27.2", features = ["derive"] }
symphonia = { version = "0.5.4", features = ["mp3", "opt-simd"] }
thiserror = "2.0.15"
url = "2.5.4"
sha2 = { version = "0.10.9", optional = true }
regex = { version = "1.11.1", optional = true }
sha1 = { version = "0.10.6", optional = true }
# TODO: look at forking voice_activity_detector to include passthrough args for CUDA + COREML execution providers
# Also: change the default session to try-load said execution providers (see Ort docs).
voice_activity_detector = "0.2.1"
earshot = "0.1.0"
webrtc-vad = "0.4.0"
parking_lot = { version = "0.12.4", features = ["deadlock_detection"] }
strsim = "0.11.1"
sanitize-filename = { version = "0.6.0", optional = true }
log = { version = "0.4.27", optional = true }

[dev-dependencies]
criterion = "0.7.0"
indicatif = "0.18.0"
hound = "3.5.1"
ctrlc = "3.4.7"

[target.aarch64-apple-darwin]
rustflags = "-lc++ -l framework=Accelerate"

[target.x86_64-pc-windows-gnu]
linker = "C:\\msys64\\ucrt64\\bin\\gcc.exe"
ar = "C:\\msys64\\ucrt64\\bin\\ar.exe"

[features]
default = ["sdl2"]
ribble-logging = ["dep:log"]
sdl2 = ["dep:sdl2"]
sdl2-static = ["sdl2", "sdl2/static-link", "sdl2/bundled"]
all = ["downloader-async", "resampler", "integrity", "crossbeam", "serde", "sdl2"]
_gpu = []
crossbeam = ["dep:crossbeam"]
serde = ["dep:serde"]
downloader = ["dep:reqwest", "dep:sanitize-filename"]
integrity = ["downloader", "serde", "dep:serde_json", "dep:sha1", "dep:sha2", "dep:regex", "reqwest/json"]
downloader-async = ["downloader", "dep:tokio", "dep:bytes", "dep:futures", "dep:futures-util", "dep:futures-core"]
resampler = ["dep:rubato"]
# whisper-rs passthrough features:
cuda = ["whisper-rs/cuda", "_gpu"]
openblas = ["whisper-rs/openblas"]
hipblas = ["whisper-rs/hipblas", "_gpu"]
coreml = ["whisper-rs/coreml", "whisper-rs/metal", "_gpu"]
metal = ["whisper-rs/metal", "_gpu"]
vulkan = ["whisper-rs/vulkan", "_gpu"]
log_backend = ["whisper-rs/log_backend", "ribble-logging"]
tracing_backend = ["whisper-rs/tracing_backend", "ribble-logging"]
# symphonia passthrough features:
symphonia-all = ["symphonia/all-codecs", "symphonia/all-formats"]
symphonia-mpeg = ["symphonia/mpa"]
symphonia-aac = ["symphonia/aac", "symphonia/isomp4"]
symphonia-alac = ["symphonia/alac", "symphonia/isomp4", "symphonia/caf", "symphonia/aiff"]
symphonia-simd = ["symphonia/opt-simd"]

[[bench]]
name = "recorder_benchmark"
harness = false

[[bench]]
name = "vad_benchmark"
harness = false

[[bench]]
name = "realtime_transcriber_benchmark"
harness = false
required-features = ["resampler", "crossbeam"]

[[example]]
name = "realtime_stream"
required-features = ["downloader"]

[[test]]
name = "transcriber_tests"
required-features = ["_gpu", "resampler"]

[[test]]
name = "resampler_tests"
required-features = ["resampler"]

[[test]]
name = "downloader_tests"
required-features = ["downloader-async"]

[[test]]
name = "integrity_tests"
required-features = ["integrity"]

[[test]]
name = "vad_tests"
required-features = ["resampler"]

[[test]]
name = "loader_tests"
required-features = ["resampler"]
